Wed Apr 21 00:29:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c (bigmul1_karatsuba): fix calculation order to prevent
	  underflow.  [ruby-core:29088]

Wed Apr 21 00:26:17 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_NEXT, NODE_REDO): add dummy putnil instruction to
	  fix stack consistency error.  [ruby-core:28172]

	* bootstraptest/test_jump.rb: add a test for above.

Wed Apr 21 00:16:44 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (rb_deflate_params): update buf_filled count because
	  deflateParams writes to out buffer.  And, revert r18029 because the
	  flush was not needed now and emits garbage.  [ruby-dev:40802]

Wed Apr 21 00:01:05 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_method.c (rb_add_method_def): decrement alias count of
	  rb_method_definition_t to prevent memory leak.  see
	  [ruby-dev:41021].

Tue Apr 20 21:33:06 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/win32/lib/win32/registry.rb (PredefinedKey#create): root key
	  name should be a string.  fixed [ruby-core:28192]

Tue Apr 20 19:25:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fix for tLPAREN_ARG.

Tue Apr 20 12:34:23 2010  Takeyuki FUJIOKA  <xibbar@ruby-lang.org>

	* lib/cgi/{core, util}.rb (RFC822_DAYS, RFC822_MONTHS):
	  move the constant because used only util.rb.

Tue Apr 20 12:24:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_state_e, IS_END, IS_SPCARG, parser_yylex): separate
	  the state after vcall.  [ruby-core:29578]

Tue Apr 20 01:03:00 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* bootstraptest/test_fork.rb: add a test for [ruby-core:28924].

Tue Apr 20 00:43:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (rb_file_s_extname): skip last directory separators.
	  [ruby-core:29627]

Tue Apr 20 00:41:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (internal_{read,write}_func, rb_{read,write}_internal):
	  reverted r27265, since now rb_thread_blocking_region() preserves
	  errno.
